# granxa-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_users.py  0003_user_email.py  3a2b1c4d5e6f_initial_schema.py  8f1c3d2a4b1e_add_lotes_and_lote_id_to_sheep_and_.py
app/: config.py  database.py  main.py
app/models/: __init__.py  lote.py  plot.py  rotation.py  sheep.py  user.py
app/routers/: auth.py  lotes.py  plots.py  rotation.py  sheep.py
app/schemas/: __init__.py  auth.py  lote.py  plot.py  rotation.py  sheep.py
app/services/: auth.py  lotes.py
app/utils/: geo.py
scripts/: create_user.py
tests/: conftest.py  helpers.py  test_auth.py  test_health.py  test_integrity.py  test_lotes.py  test_rotations_lotes.py  test_sheep_lotes.py
